prepared README and other minor edits